docs(stories): add dataset loading and switching stories

--- a/docs/stories/1.2.dataset-loading-and-management.md
+++ b/docs/stories/1.2.dataset-loading-and-management.md
@@ -1,14 +1,17 @@
 # Story 1.2: Dataset Loading and Management
 
 ## Status
+
 Draft
 
 ## Story
+
 **As a** Developer,
 **I want** to implement dataset loading from CSV files and create a data management system,
 **so that** the application can load and process UCI Wine Quality datasets for visualization.
 
 ## Acceptance Criteria
+
 1. Application can load red and white wine CSV datasets from the public directory
 2. CSV data is parsed into structured JavaScript objects
 3. Data management system can handle both datasets and switch between them
@@ -16,19 +19,22 @@ Draft
 5. Error handling is implemented for file loading failures
 
 ## Tasks / Subtasks
+
 - [ ] Implement CSV loading functionality
   - [ ] Create CSV loader module (csv-loader.js)
   - [ ] Implement async function to load CSV files from public directory
-  - [ ] Handle file loading errors gracefully
+  - [ ] Handle file loading errors gracefully (network errors, file not found)
 - [ ] Parse CSV data into structured objects
-  - [ ] Create data parsing function
+  - [ ] Create data parsing function using Papa Parse library
   - [ ] Map CSV columns to WineDataPoint objects
   - [ ] Validate data structure and handle missing/invalid data
+  - [ ] Handle parsing errors (malformed CSV, unexpected data types)
 - [ ] Create data management system
   - [ ] Create WineDataManager class
   - [ ] Implement dataset switching functionality
   - [ ] Store both red and white wine datasets in memory
   - [ ] Provide methods to access current dataset
+  - [ ] Implement lazy loading for large datasets (if needed)
 - [ ] Extract and manage dataset metadata
   - [ ] Create DatasetInfo objects with metadata
   - [ ] Store instance counts for each dataset
@@ -36,19 +42,27 @@ Draft
 - [ ] Implement error handling
   - [ ] Handle file not found errors
   - [ ] Handle CSV parsing errors
+  - [ ] Handle network errors during file loading
   - [ ] Display user-friendly error messages
   - [ ] Log errors for debugging
+- [ ] Performance optimization
+  - [ ] Ensure datasets load within 2 seconds on modern browsers
+  - [ ] Optimize memory usage for large datasets
 - [ ] Create unit tests
   - [ ] Test CSV loading functionality
-  - [ ] Test data parsing functions
-  - [] Test data management system
-  - [ ] Test error handling scenarios
+  - [ ] Test data parsing functions with valid and invalid data
+  - [ ] Test data management system
+  - [ ] Test error handling scenarios (file not found, parsing errors, network errors)
+  - [ ] Test performance with large datasets
 
 ## Dev Notes
+
 ### Data Models
+
 Based on the architecture document, the data models are:
 
 **WineDataPoint:**
+
 ```typescript
 interface WineDataPoint {
   fixedAcidity: number;
@@ -67,6 +81,7 @@ interface WineDataPoint {
 ```
 
 **DatasetInfo:**
+
 ```typescript
 interface DatasetInfo {
   type: 'red' | 'white';
@@ -78,27 +93,49 @@ interface DatasetInfo {
 ```
 
 ### File Locations
+
 - Red wine dataset: `/public/red-wine.csv`
 - White wine dataset: `/public/white-wine.csv`
 
+### Expected CSV Format
+
+Example of the expected CSV format (first few columns of red wine dataset):
+
+```
+"fixed acidity","volatile acidity","citric acid","residual sugar","chlorides","free sulfur dioxide","total sulfur dioxide","density","pH","sulphates","alcohol","quality"
+7.4,0.7,0,1.9,0.076,11,34,0.9978,3.51,0.56,9.4,5
+7.8,0.88,0,2.6,0.098,25,67,0.9968,3.2,0.68,9.8,5
+```
+
 ### Implementation Approach
-- Use a lightweight CSV parsing library like Papa Parse
+
+- Use Papa Parse as the CSV parsing library (already included in Strudel Kit dependencies)
 - Load both datasets on application initialization
 - Store datasets in memory for fast access
-- Implement lazy loading if datasets are too large
+- Implement lazy loading if datasets are too large (>10MB)
+- Optimize parsing for performance with streaming if needed
+
+### Performance Targets
+
+- Dataset loading and parsing should complete within 2 seconds on modern browsers
+- Memory usage should not exceed 50MB for each dataset
+- Dataset switching should be instantaneous (<100ms)
 
 ### Testing Standards
+
 - Unit tests should be placed in `/tests/unit/data/` directory
-- Test data parsing with various CSV formats
-- Test error scenarios with invalid CSV files
+- Test data parsing with various CSV formats (valid, malformed, empty files)
+- Test error scenarios with invalid CSV files and network errors
 - Mock file loading for unit tests
 - Test dataset switching functionality
+- Performance tests to verify loading times meet targets
 
 ## Change Log
 
-| Date | Version | Description | Author |
-|------|---------|-------------|--------|
-| 2025-09-08 | 1.0 | Initial story creation | Sarah (Product Owner) |
+| Date       | Version | Description                                                                                                      | Author                |
+| ---------- | ------- | ---------------------------------------------------------------------------------------------------------------- | --------------------- |
+| 2025-09-08 | 1.0     | Initial story creation                                                                                           | Sarah (Product Owner) |
+| 2025-09-10 | 1.1     | Enhanced error handling scenarios, added performance targets, specified CSV library, included CSV format example | Sarah (Product Owner) |
 
 ## Dev Agent Record
 
