Update project documentation and stories
This commit updates the project documentation including:
- Project setup and structure details
- Dataset loading and management requirements
- Basic UI component specifications
- Dataset switching implementation guidelines

--- a/docs/stories/1.1.project-setup-and-structure.md
+++ b/docs/stories/1.1.project-setup-and-structure.md
@@ -141,4 +141,4 @@ Gemini
 
 ### Gate Status
 
-Gate: CONCERNS → docs/qa/gates/1.1-project-setup-and-structure.yml
+Gate: CONCERNS → docs/qa/1.1-project-setup-and-structure.yml
