--- a/docs/stories/2.1.dataset-switching-implementation.md
+++ b/docs/stories/2.1.dataset-switching-implementation.md
@@ -176,7 +176,7 @@ No files were modified during this review as this is a draft story.
 
 ### Gate Status
 
-Gate: CONCERNS → docs/qa/gates/2.1-dataset-switching-implementation.yml
+Gate: CONCERNS → docs/qa/2.1-dataset-switching-implementation.yml
 Risk profile: Not generated for this review
 NFR assessment: Included in gate file
 
